--- a/css/word.css
+++ b/css/word.css
@@ -1,3 +1,28 @@
 body {
     background-color: rgb(50, 61, 71);
 }
+
+input:focus {
+    outline: none;
+}
+
+/* 카운트다운 팝업 스타일 */
+#countdown-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(30, 36, 42);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#countdown-number {
+    font-size: 100px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
