--- a/views/typing.html
+++ b/views/typing.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <div id="mainText">
+        <h1>타자 연습에 오신것을 환영합니다!</h1>
+        <h4>
+        타자 연습의 주요 효능은 향상된 생산성, 두뇌 발달, 그리고 언어 능력 강화입니다.
+        타자 연습을 통해 컴퓨터 작업 속도가 빨라져 시간을 절약하고, 손가락과 청각을 자극해-
+        하하 이런게 뭐가 중요합니까 그냥 즐깁시다
+        </h4>
+    </div>
     <div class="main">
         <h1>타자 연습</h1>
         <button id="button1">단어</button>
