--- a/views/word.html
+++ b/views/word.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/word.css">
     <title>타자 연습(단어)</title>
 </head>
+
 <body>
-    <button></button>
+    <!-- 카운트다운 팝업 -->
+    <div id="countdown-popup">
+        <div id="countdown-number">5</div>
+    </div>
+
+    <input>
+    <script src="../js/word.js"></script>
 </body>
+
 </html>
