--- a/css/word.css
+++ b/css/word.css
@@ -6,7 +6,19 @@ input:focus {
     outline: none;
 }
 
-/* 카운트다운 팝업 스타일 */
+#content {
+    text-align: center;
+    margin-top: 230px;
+}
+
+#content #typing {
+    height: 40px;
+    width: 1100px;
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+/* 카운트다운 팝업 스타일  */
 #countdown-popup {
     position: fixed;
     top: 0;
@@ -25,4 +37,11 @@ input:focus {
     color: white;
     font-weight: bold;
     text-align: center;
+}
+
+/* 단어 보여주기 */
+#content #text #example {
+    font-size: 30px;
+    color: rgb(255, 221, 0);
+    background-color: rgba(255, 223, 106, 0.339);
 }
