--- a/views/word.html
+++ b/views/word.html
@@ -18,8 +18,11 @@
                 <label id="example">게이</label> 
             </div>
             <input id="typing" type="text" autocomplete="off">
-            <div id="ouput">
-                <p id="result">입력한 텍스트가 표시됨</p>
+            <div id="output">
+                <label id="result">입력한 텍스트가 표시됨</label>
+            </div>
+            <div id="output2">
+                <label id="yesOrNo">입력이 일치하는지 보여줍니다.   </label>
             </div>
         </div>
         <script src="../js/word.js"></script>
